# obs-bundler

./: CMakeLists.txt  LICENSE.txt  README.asciidoc  run-cmake.cmd
tools/: bootstrap.ps1  gtk2-prep.ps1  mingw-library-prep.ps1
